# airline-satisfaction-mlops

./: .gitignore  README.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
dvc_plots/: index.html
notebook/: Airline_Passenger_Satisfaction (2).ipynb
reports/: metrics.json
src/: exception.py  logger_config.py  utils.py
src/components/: data_ingestion.py  evaluate.py  feature_engineering.py  train.py
tests/: conftest.py  test_data_ingestion.py  test_evaluate.py  test_exception.py  test_feature_engineering.py  test_train.py  test_utils.py
