[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.67.1",
    "dvclive>=3.49.1",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
