[project]
name = "mlops"
version = "0.1.0"
description = "Airline Passenger Satisfaction MLOps Pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dvc[s3]>=3.67.1",
    "joblib>=1.5.0",
    "loguru>=0.7.0",
    "matplotlib>=3.9.0",
    "mlflow>=2.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0,<3",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "xgboost>=2.1.0",
    "pyyaml>=6.0",
    "dagshub>=0.7.0",
    "dotenv>=0.9.9",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]
