[project]
name = "mlops"
version = "0.1.0"
description = "Airline Passenger Satisfaction MLOps Pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dvc[s3]>=3.67.1",
    "joblib>=1.5.0",
    "loguru>=0.7.0",
    "matplotlib>=3.9.0",
    "mlflow>=2.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0,<3",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "xgboost>=2.1.0",
    "pyyaml>=6.0",
    "dagshub>=0.7.0",
    "dotenv>=0.9.9",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

# ─── Ruff Configuration ────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88

include = ["src/**/*.py", "tests/**/*.py"]

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "*.ipynb",
    "experiments/",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (spacing, syntax)
    "F",   # pyflakes (unused imports, undefined names)
    "W",   # pycodestyle warnings (trailing whitespace)
    "I",   # isort (import ordering)
    
]

ignore = [
    "E501",   # Line too long — ML code often has long strings/paths
    # F401 is handled per-file below, not globally
    # W503 removed — not a valid Ruff rule
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]        # re-exports are intentionally "unused"
"tests/**/*.py" = ["F841"]      # unused variables in tests are acceptable
